# freas-analyzer-validity

./: .gitignore  Dockerfile  LICENSE  README.md  guide.md  main.py  pyproject.toml
Checker/: checker.py
Constrains/: flow_check.py  pe_check.py  pes_check.py  pet_check.py
Diagrams/: recommendation.bpmn  semantics_good.bpmn
Elements/: artefact.py  association.py  data_object.py  data_reference.py  data_store.py  element.py  evidence_data_relation.py  pe_source.py  pool.py  process.py
Parser/: parser.py
Response/: mistake.py  recommendation.py  response.py
analyzer/: analyzer.py
diagrams/: all_computations.bpmn  all_computations_bad_input_type.bpmn  before_after_diagram.bpmn  different_evidence_context.bpmn  disputable_stored_in_same_context.bpmn  disputable_stored_in_same_store.bpmn  integrity_computation_output_good.bpmn  integrity_computation_two_inputs.bpmn  keyed_hash_fun_bad_io.bpmn  keyed_hash_reused_key.bpmn  missing_evidence_source.bpmn  proof_and_pe_store.bpmn
elements/: artefact.py  association.py  data_association.py  data_object.py  data_reference.py  data_store.py  element.py  evidence_data_relation.py  hash_function.py  pe_source.py  pool.py  pot_evidence_source.py  process.py  proof.py
input/: analysis_types.py  example.json  input.py  input_example.json
parser/: parser.py
response/: error.py  response.py  warning.py
result/: error.py  example.json  mistake.py  recommendation.py  response.py  result.py  severity.py  warning.py
results/: error.py  example.json  mistake.py  recommendation.py  response.py  result.py  severity.py  (+1 more)
(+269 files in other folders)
