[tool.poetry]
name = "analyzer"
version = "0.1.1"
description = "Model-Based Analysis of Forensic-Ready Software Systems"
authors = ["Sofija Maksovic <maksovic@mail.muni.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zope-interface = "^5.5.2"
z3-solver = "^4.11.2.0"
pytest = "^7.3.1"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
defusedxml = "^0.7.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"